Fix feedback__btn on small screen

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -553,6 +553,9 @@ a
 @media (max-width: 560px)
 	.feedback__form-box
 		width: 100%
+	.feedback__btn
+		margin-left: auto
+		margin-right: auto
 
 	.reviews__img
 		max-width: 75px
